@@ -1,6 +1,7 @@
 2009-05-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
-	* photoframe.py: Code refactoring (Added new class PopUpMenu).
+	* photoframe.py, photoliststore.py, base.py: Code refactoring.
+	  Added new class PopUpMenu & NoPhoto.
 
 2009-05-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
